[package]
name = "matchmaker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
cargo-watch = "8.5.2"
chrono = "0.4.38"
log = "0.4.22"
serde = "1.0.204"
serde_json = "1.0.120"
surrealdb = "1.5.4"
thiserror = "1.0.63"
tokio = "1.38.0"
config = "0.14.0"
async-trait = "0.1.81"
rand = "0.8.5"
