[package]
name = "matchmaker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["headers", "macros"] }
cargo-watch = "8.5.2"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4.22"
serde = "1.0.204"
serde_derive = "1.0"
serde_json = "1.0.120"
sqlx = { version = "0.8.0", features = ["postgres", "runtime-tokio-rustls", "uuid", "time"] }
thiserror = "1.0.63"
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros", "signal"] }
config = "0.14.0"
async-trait = "0.1.81"
rand = "0.8.5"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
argonautica = { version = "0.2.0" }
futures-util = "0.3.30"
http = "1.1.0"
hyper = { version = "1.4.1", features = ["client"] }
hyper-util = "0.1.7"
bytes = "1.6.0"
http-body = "1.0.1"
http-body-util = "0.1.2"
pin-project-lite = "0.2.14"
tower-service = "0.3.2"
validator = { version = "0.18.1", features = ["derive"] }
erased-serde = "0.4.5"
tower = { version = "0.4", features = ["util"] }
jsonwebtoken = "9.3.0"
dotenvy = "0.15.7"


